--- a/aktivitas5.html
+++ b/aktivitas5.html
@@ -327,7 +327,7 @@
               <li>
                 <div
                   class="node purple"
-                  onclick="showModal('AA 5','Mengeluarkan instruksi mulai kerja sisi kapal (sesuai rencana di CWP/Bay Plan).')"
+                  onclick="showModal('AA 5','Mengeluarkan instruksi mulai kerja sisi kapal (sesuai rencana di CWP/Bay Plan)')"
                 >
                   AA 5
                 </div>
@@ -337,7 +337,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 9 (Risiko 9)','RInstruksi/komunikasi tidak jelas (radio/isyarat tangan).')"
+                      onclick="showModal('Risk 9 (Risiko 9)','Instruksi/komunikasi tidak jelas (radio/isyarat tangan)')"
                     >
                       R 9
                     </div>
@@ -409,7 +409,7 @@
               <li>
                 <div
                   class="node purple"
-                  onclick="showModal('AP 5','Validasi perangkat & dokumen kerja sebelum mulai (device & validasi tools kerja; CWP/PA/Radio).')"
+                  onclick="showModal('AP 5','Validasi perangkat & dokumen kerja sebelum mulai (device & validasi tools kerja; CWP/PA/Radio)')"
                 >
                   AP 5
                 </div>
@@ -419,7 +419,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 9 (Risiko 9)','Gagal komunikasi radio atau miskom (radio mati/salah kanal/tidak cukup unit).')"
+                      onclick="showModal('Risk 9 (Risiko 9)','Gagal komunikasi radio atau miskom (radio mati/salah kanal/tidak cukup unit)')"
                     >
                       R 9
                     </div>
