--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -375,7 +375,7 @@
               <li>
                 <div
                   class="node purple"
-                  onclick="showModal('Aktivitas Administrasi 2','Menerbitkan Roster & Deployment per shift...')"
+                  onclick="showModal('Aktivitas Administrasi 2','Menerbitkan Roster & Deployment per shift (termasuk update flexible roster)')"
                 >
                   AA 2
                 </div>
@@ -391,7 +391,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 3 (Penyebab 3)','Perkiraan beban kerja tidak akurat')"
+                          onclick="showModal('Cause 3 (Penyebab 3)','Perkiraan beban kerja tidak akurat (jadwal kapal/CWP/forecast move tidak sinkron)')"
                         >
                           C 3
                         </div>
@@ -399,7 +399,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 3','Gunakan forecast berbasis BAPLIE final...')"
+                              onclick="showModal('Preventive Measure 3','Gunakan forecast berbasis BAPLIE final + historis move, lalu simulasikan CWP dan perbarui rolling saat ada perubahan jadwal.')"
                             >
                               PM 3
                             </div>
@@ -409,7 +409,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 4 (Penyebab 4)','Tidak ada/kurang update skills-matrix...')"
+                          onclick="showModal('Cause 4 (Penyebab 4)','Tidak ada/kurang update skills-matrix & sertifikasi, sehingga penempatan tidak sesuai kompetensi')"
                         >
                           C 4
                         </div>
@@ -417,7 +417,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 4','Terapkan skills-matrix formal...')"
+                              onclick="showModal('Preventive Measure 4','Terapkan skills-matrix formal dan program kompetensi/sertifikasi operator sesuai pedoman keselamatan pelabuhan.')"
                             >
                               PM 4
                             </div>
@@ -427,7 +427,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 5 (Penyebab 5)','Ketidakhadiran mendadak tidak tertangani...')"
+                          onclick="showModal('Cause 5 (Penyebab 5)','Ketidakhadiran mendadak (sakit/izin) tidak tertangani real-time karena tidak ada back-up pool')"
                         >
                           C 5
                         </div>
@@ -435,7 +435,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 5','Siapkan reserve/on-call pool...')"
+                              onclick="showModal('Preventive Measure 5','Siapkan reserve/on-call pool dan rencana workforce planning berbasis skenario untuk menutup gap kehadiran.')"
                             >
                               PM 5
                             </div>
@@ -447,7 +447,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 4 (Risiko 4)','Roster kurang fleksibel terhadap ketidakpastian...')"
+                      onclick="showModal('Risk 4 (Risiko 4)','Roster kurang fleksibel terhadap ketidakpastian operasional')"
                     >
                       R 4
                     </div>
@@ -455,7 +455,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 6 (Penyebab 6)','Roster kaku (fixed shift tanpa buffer...)')"
+                          onclick="showModal('Cause 6 (Penyebab 6)','Roster kaku (fixed shift tanpa buffer/on-call/multi-skilling)')"
                         >
                           C 6
                         </div>
@@ -463,7 +463,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 6','Terapkan flexible rostering...')"
+                              onclick="showModal('Preventive Measure 6','Terapkan flexible rostering (buffer shift, multi-skilling) sebagai bagian dari perencanaan tenaga kerja pelabuhan.')"
                             >
                               PM 6
                             </div>
@@ -473,7 +473,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 7 (Penyebab 7)','Batasan regulasi & kontrak menyulitkan...')"
+                          onclick="showModal('Cause 7 (Penyebab 7)','Batasan regulasi & kontrak (jam kerja/overtime/aturan serikat) menyulitkan penyesuaian cepat')"
                         >
                           C 7
                         </div>
@@ -481,7 +481,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 7','Bangun roster yang patuh aturan...')"
+                              onclick="showModal('Preventive Measure 7','Bangun roster yang patuh aturan jam kerja & kelelahan (fatigue) sesuai ILO Code of Practice, plus MoU dengan serikat untuk skema fleksibel.')"
                             >
                               PM 7
                             </div>
@@ -504,7 +504,7 @@
               <li>
                 <div
                   class="node purple"
-                  onclick="showModal('Aktivitas Pemeriksaan 2','Verifikasi Roster & Deployment per shift...')"
+                  onclick="showModal('Aktivitas Pemeriksaan 2','Verifikasi Roster & Deployment per shift (termasuk update flexible roster)')"
                 >
                   AP 2
                 </div>
@@ -512,7 +512,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 3 (Risiko 3)','Mismatch kebutuhan–ketersediaan personel/alat...')"
+                      onclick="showModal('Risk 3 (Risiko 3)','Mismatch kebutuhan–ketersediaan personel/alat (under/over-staffing & mis-allocation)')"
                     >
                       R 3
                     </div>
@@ -520,7 +520,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 5 (Penyebab 5)','Data/peramalan beban kerja tidak akurat...')"
+                          onclick="showModal('Cause 5 (Penyebab 5)','Data/peramalan beban kerja tidak akurat atau belum tersinkron (perubahan CWP/yard plan/ETA–volume belum masuk roster)')"
                         >
                           C 5
                         </div>
@@ -528,7 +528,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 5','Sinkronkan TOS ke engine roster otomatis...')"
+                              onclick="showModal('Preventive Measure 5','Sinkronkan TOS (CWP/yard plan & ETA-volume) ke engine roster otomatis sebelum H-12 dan “freeze” roster')"
                             >
                               PM 5
                             </div>
@@ -538,7 +538,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 6 (Penyebab 6)','Absensi mendadak tidak tertangani...')"
+                          onclick="showModal('Cause 6 (Penyebab 6)','Absensi/izin mendadak tidak tertangani dan tidak ada pool cadangan (standby) yang siap')"
                         >
                           C 6
                         </div>
@@ -546,7 +546,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 6','Sediakan standby pool pada flexible roster...')"
+                              onclick="showModal('Preventive Measure 6','Sediakan standby pool pada flexible roster (roving/multi-skill) yang terjadwal tiap shift')"
                             >
                               PM 6
                             </div>
@@ -558,7 +558,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 4 (Risiko 4)','Ketidakcocokan kompetensi/sertifikasi...')"
+                      onclick="showModal('Risk 4 (Risiko 4)','Ketidakcocokan kompetensi/sertifikasi dengan penugasan')"
                     >
                       R 4
                     </div>
@@ -566,7 +566,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 7 (Penyebab 7)','Penjadwalan tidak berbasis keterampilan...')"
+                          onclick="showModal('Cause 7 (Penyebab 7)','Penjadwalan tidak berbasis keterampilan/izin alat (engine roster tidak mengunci pairing skill–alat)')"
                         >
                           C 7
                         </div>
@@ -574,7 +574,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 7','Aktifkan aturan skill/license lock...')"
+                              onclick="showModal('Preventive Measure 7','Aktifkan aturan “skill/license lock” di engine roster (assignment gagal jika sertifikat/izin tidak valid)')"
                             >
                               PM 7
                             </div>
@@ -584,7 +584,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 8 (Penyebab 8)','Minimnya multi-skilling sehingga pengganti terbatas')"
+                          onclick="showModal('Cause 8 (Penyebab 8)','Minimnya multi-skilling sehingga pilihan pengganti bersertifikat sangat terbatas')"
                         >
                           C 8
                         </div>
@@ -592,7 +592,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 8','Program multi-skilling terjadwal...')"
+                              onclick="showModal('Preventive Measure 8','Jalankan program multi-skilling terjadwal dan pelihara matriks kompetensi sebagai acuan penugasan')"
                             >
                               PM 8
                             </div>
@@ -604,7 +604,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 5 (Risiko 5)','Kelelahan (fatigue) karena pola shift tidak sehat')"
+                      onclick="showModal('Risk 5 (Risiko 5)','Kelelahan (fatigue) karena pola shift/roster yang tidak sehat atau perubahan mendadak')"
                     >
                       R 5
                     </div>
@@ -612,7 +612,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 9 (Penyebab 9)','Rotasi shift tidak sehat (malam berturut-turut...)')"
+                          onclick="showModal('Cause 9 (Penyebab 9)','Rotasi shift tidak sehat (shift malam berturut-turut, jam kerja panjang/lembur tinggi)')"
                         >
                           C 9
                         </div>
@@ -620,7 +620,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 9','Terapkan FRMS + batas jam kerja...')"
+                              onclick="showModal('Preventive Measure 9','Terapkan FRMS + batas jam kerja & rotasi sehat (mis. max 2 shift malam beruntun, rest ≥10–12 jam) yang dikunci di engine roster')"
                             >
                               PM 9
                             </div>
@@ -630,7 +630,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 10 (Penyebab 10)','Kekurangan personel → lembur berulang')"
+                          onclick="showModal('Cause 10 (Penyebab 10)','Kekurangan personel kronis mendorong lembur berulang untuk mengejar target produktivitas')"
                         >
                           C 10
                         </div>
@@ -638,7 +638,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 10','Standby pool multi-skill per shift...')"
+                              onclick="showModal('Preventive Measure 10','Sediakan standby pool multi-skill per shift (roving) untuk menutup absen tanpa lembur berulang')"
                             >
                               PM 10
                             </div>
