--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -243,7 +243,7 @@
       .table-container {
         width: 90%;
         max-width: 1200px;
-        margin: 40px auto; /* Jarak atas dikurangi */
+        margin: 0 auto 60px auto;
         background: #ffffff;
         padding: 30px;
         border-radius: 20px;
