--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -399,7 +399,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 3','Gunakan forecast berbasis BAPLIE final + historis move, lalu simulasikan CWP dan perbarui rolling saat ada perubahan jadwal.')"
+                              onclick="showModal('Preventive Measure 3 (Tindakan Preventif 3)','Gunakan forecast berbasis BAPLIE final + historis move, lalu simulasikan CWP dan perbarui rolling saat ada perubahan jadwal.')"
                             >
                               PM 3
                             </div>
@@ -435,7 +435,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 5','Siapkan reserve/on-call pool dan rencana workforce planning berbasis skenario untuk menutup gap kehadiran.')"
+                              onclick="showModal('Preventive Measure 5 (Tindakan Preventif 5)','Siapkan reserve/on-call pool dan rencana workforce planning berbasis skenario untuk menutup gap kehadiran.')"
                             >
                               PM 5
                             </div>
