revisi translate PM

--- a/aktivitas1.html
+++ b/aktivitas1.html
@@ -524,7 +524,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 4','Update harian “berth capacity matrix” (kedalaman aktual & status crane) terhubung ke BA Map dengan aturan no-allocate jika tidak memenuhi batas')"
+                              onclick="showModal('Preventive Measure 4 (Tindakan Preventif 4)','Update harian “berth capacity matrix” (kedalaman aktual & status crane) terhubung ke BA Map dengan aturan no-allocate jika tidak memenuhi batas')"
                             >
                               PM 4
                             </div>
