--- a/aktivitas3.html
+++ b/aktivitas3.html
@@ -391,7 +391,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 8','Terapkan kontrol versi & acknowledgement EDI (gunakan APERAK/CONTRL) agar hanya versi terbaru yang dipakai.')"
+                              onclick="showModal('Preventive Measure 8 (Tindakan Preventif 8)','Terapkan kontrol versi & acknowledgement EDI (gunakan APERAK/CONTRL) agar hanya versi terbaru yang dipakai.')"
                             >
                               PM 8
                             </div>
@@ -409,7 +409,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 9','Aktifkan rule-based validation (bay/row/tier/type) dan cek VGM sesuai SOLAS-VGM sebelum publish.')"
+                              onclick="showModal('Preventive Measure 9 (Tindakan Preventif 9)','Aktifkan rule-based validation (bay/row/tier/type) dan cek VGM sesuai SOLAS-VGM sebelum publish.')"
                             >
                               PM 9
                             </div>
@@ -438,7 +438,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 10','Terapkan penjadwalan QCSP di TOS dengan kendala non-crossing & safety distance + validasi CWP sebelum publish')"
+                              onclick="showModal('Preventive Measure 10 (Tindakan Preventif 10)','Terapkan penjadwalan QCSP di TOS dengan kendala non-crossing & safety distance + validasi CWP sebelum publish')"
                             >
                               PM 10
                             </div>
@@ -485,7 +485,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 11','Hard-validation di TOS (ISO size/type & DG/reefer wajib benar; VGM wajib ada—kalau tidak, blok rencana)')"
+                              onclick="showModal('Preventive Measure 11 (Tindakan Preventif 11)','Hard-validation di TOS (ISO size/type & DG/reefer wajib benar; VGM wajib ada—kalau tidak, blok rencana)')"
                             >
                               PM 11
                             </div>
@@ -503,7 +503,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 12','Governansi master data kapal (update saat first call & sign-off oleh shipping line; versi dikunci sebelum planning)')"
+                              onclick="showModal('Preventive Measure 12 (Tindakan Preventif 12)','Governansi master data kapal (update saat first call & sign-off oleh shipping line; versi dikunci sebelum planning)')"
                             >
                               PM 12
                             </div>
@@ -532,7 +532,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 13','IMDG rule engine di TOS (tag DG/reefer/OOG wajib; rencana otomatis block jika tidak sesuai segregasi)')"
+                              onclick="showModal('Preventive Measure 13 (Tindakan Preventif 13)','IMDG rule engine di TOS (tag DG/reefer/OOG wajib; rencana otomatis block jika tidak sesuai segregasi)')"
                             >
                               PM 13
                             </div>
@@ -550,7 +550,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 14','Wajib loadicator check & CO approval sebelum rilis Bay Plan/CWP (rencana tidak bisa dieksekusi sebelum lolos)')"
+                              onclick="showModal('Preventive Measure 14 (Tindakan Preventif 14)','Wajib loadicator check & CO approval sebelum rilis Bay Plan/CWP (rencana tidak bisa dieksekusi sebelum lolos)')"
                             >
                               PM 14
                             </div>
