--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -510,7 +510,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 16 (Tindakan Preventif)','Siapkan standby plan operator & unit cadangan untuk hot-swap saat downtime')"
+                              onclick="showModal('Preventive Measure 16 (Tindakan Preventif 16)','Siapkan standby plan operator & unit cadangan untuk hot-swap saat downtime')"
                             >
                               PM 16
                             </div>
