nambah tabel likelihood & sevrity + copas css sama js

--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -263,6 +263,13 @@
         position: relative;
         box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
       }
+      .modal-title {
+        font-size: 22px;
+        font-weight: 700;
+        margin-top: 0;
+        margin-bottom: 20px;
+        color: #126e80;
+      }
       .close-btn {
         position: absolute;
         top: 10px;
