--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
           max-width: 570px;
         }
       }
-      /* ========================================= */
-      /* CHAT WIDGET STYLES                        */
-      /* ========================================= */
+      /* Chat Widget Styles */
       .chat-widget-container {
         position: fixed;
         bottom: 30px;
